--- a/style.css
+++ b/style.css
@@ -30,3 +30,9 @@ margin: 50px;
     border-radius: 5px;
     background-image: linear-gradient(red, orange) ;
 }
+.midle-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right; 
+    margin-top: 50px;
+}
